syntax = "proto3";
package tutorial;

option go_package = "github.com/vincent178/talks/proto-compatibility/v1";

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service HelloService {
    rpc Hello(HelloRequest) returns (HelloReply);
}
